2010-10-15  Robert Larice
 * src/frontend/aspice.c ,
 * src/frontend/com_gnuplot.c ,
 * src/frontend/com_hardcopy.c ,
 * src/frontend/com_xgraph.c ,
 * src/frontend/inp.c ,
 * src/frontend/nutinp.c ,
 * src/include/ngspice.h ,
 * src/ngsconvert.c :
    collect smktemp() in "mktemp.h"

2010-10-13  Dietmar Warning
 * src/frontend/com_option.c: better formatting the output and
   add some useful parameters if command 'option' is given
 * src/include/cktdefs.h,
 * src/spicelib/analysis/cktdojob.c, cktntask.c,
 * src/spicelib/devices/cktinit.c,
 * src/spicelib/parser/inppas2.c:
   Reduction of trtol to 1 only if 'A' devices in the circuit and xspice is enabled

2010-10-09  Robert Larice
 * src/include/complex.h :
    !REVERT! remove typedef for _complex, which is used nowhere
    this breaks MSVC, currently unkown why, FIXME

2010-10-09  Robert Larice
 * src/frontend/parse-bison.c ,
 * src/frontend/parse-bison.h ,
 * src/spicelib/parser/inpptree-parser.c ,
 * src/spicelib/parser/inpptree-parser.h :
    update the bison generated files

2010-10-09  Robert Larice
 * src/frontend/parse-bison.y ,
 * src/spicelib/parser/inpptree-parser.y :
    avoid function redeclaration, PPparse() and PTparse()

2010-10-09  Robert Larice
 * src/frontend/define.c ,
 * src/frontend/evaluate.c ,
 * src/frontend/parse-bison.y ,
 * src/frontend/parse.c ,
 * src/include/fteparse.h :
    add `PT_OP_' prefix to avoid name collision (END, PLUS, MINUS, ...)

2010-10-09  Robert Larice
 * src/frontend/com_cdump.c ,
 * src/frontend/com_chdir.c ,
 * src/frontend/com_dump.c ,
 * src/frontend/com_echo.c ,
 * src/frontend/com_ghelp.c ,
 * src/frontend/com_rehash.c ,
 * src/frontend/com_setscale.c ,
 * src/frontend/com_shell.c ,
 * src/frontend/com_shift.c ,
 * src/frontend/com_state.c ,
 * src/frontend/parser/unixcom.c ,
 * src/frontend/streams.c ,
 * src/frontend/streams.h ,
 * src/frontend/variable.c :
    collect cp_* prototypes / extern-declarations in "cpextern.h"

2010-10-09  Robert Larice